--- a/manifest.json
+++ b/manifest.json
@@ -10,34 +10,34 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "images/icon-24.png",
+            "src": "./images/icon-24.png",
             "sizes": "24x24",
-            "type": "image/png"
+            "type": "image/jpg"
         },
         {
-            "src": "images/icon-32.png",
+            "src": "./images/icon-32.png",
             "sizes": "32x32",
-            "type": "image/png"
+            "type": "image/jpg"
         },
         {
-            "src": "images/icon-48.png",
+            "src": "./images/icon-48.png",
             "sizes": "48x48",
-            "type": "image/png"
+            "type": "image/jpg"
         },
         {
-            "src": "images/icon-64.png",
+            "src": "./images/icon-64.png",
             "sizes": "64x64",
-            "type": "image/png"
+            "type": "image/jpg"
         },
         {
-            "src": "images/icon-128.png",
+            "src": "./images/icon-128.png",
             "sizes": "128x128",
-            "type": "image/png"
+            "type": "image/jpg"
         },
         {
-            "src": "images/icon-256.png",
+            "src": "./images/icon-256.png",
             "sizes": "256x256",
-            "type": "image/png"
+            "type": "image/jpg"
         }
     ]
 }
