--- a/manifest.json
+++ b/manifest.json
@@ -10,32 +10,32 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "./images/icon-24.png",
+            "src": "./images/icon-24.jpg",
             "sizes": "24x24",
             "type": "image/jpg"
         },
         {
-            "src": "./images/icon-32.png",
+            "src": "./images/icon-32.jpg",
             "sizes": "32x32",
             "type": "image/jpg"
         },
         {
-            "src": "./images/icon-48.png",
+            "src": "./images/icon-48.jpg",
             "sizes": "48x48",
             "type": "image/jpg"
         },
         {
-            "src": "./images/icon-64.png",
+            "src": "./images/icon-64.jpg",
             "sizes": "64x64",
             "type": "image/jpg"
         },
         {
-            "src": "./images/icon-128.png",
+            "src": "./images/icon-128.jpg",
             "sizes": "128x128",
             "type": "image/jpg"
         },
         {
-            "src": "./images/icon-256.png",
+            "src": "./images/icon-256.jpg",
             "sizes": "256x256",
             "type": "image/jpg"
         }
